# fpdb-3

./: Aux_Base.py  Card.py  HUD_main.pyw  WinamaxToFpdb.py  pyproject.toml  run_fpdb.py
.github/workflows/: fpdb-3.yml
archives/old feature scripts/: OSXTablesOld.py  setup.py
coverage/1aeec0dc55d66cfc57ef72b9227f700ecd8d9544/: Aux_Base_py.html  Aux_Classic_Hud_py.html  Aux_Hud_py.html  BetOnlineToFpdb_py.html  BetfairToFpdb_py.html  BovadaSummary_py.html  BovadaToFpdb_py.html  CakeToFpdb_py.html  Card_py.html  Configuration_py.html  Database_py.html  Deck_py.html  DerivedStats_py.html  DetectInstalledSites_py.html  Exceptions_py.html  Filters_py.html  GGPokerToFpdb_py.html  GuiAutoImport_py.html  GuiBulkImport_py.html  GuiGraphViewer_py.html  GuiHandViewer_py.html  GuiLogView_py.html  GuiPrefs_py.html  GuiReplayer_py.html  GuiRingPlayerStats_py.html  GuiSessionViewer_py.html  GuiTourHandViewer_py.html  GuiTourneyGraphViewer_py.html  GuiTourneyPlayerStats_py.html  HUD_main_pyw.html  HandHistoryConverter_py.html  HandHistory_py.html  Hand_py.html  Hud_py.html  IdentifySite_py.html  Importer_py.html  KingsClubToFpdb_py.html  L10n_py.html  MergeStructures_py.html  MergeSummary_py.html  (+42 more)
src/: Configuration.py  GuiHandViewer.py  HUD_main.pyw  Hand.py  HandHistoryConverter.py  TableWindow.py  fpdb.pyw  fpdb_prerun.py
test/: test_OSXTables.py  test_caketofpdb.py  test_card.py  test_charset.py  test_hand.py  test_handhistoryconverter.py  test_ipokertofpdb.py  test_partytofpdb.py  test_poker_hand.py  test_pokerstarstofpdb.py  test_swctofpdb.py  test_winamaxtofpdb.py
(+435 files in other folders)
